--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
-.App {
-  text-align: center;
+
+* {
+margin: 0;
 }
 
-.App-logo {
+.App {
+  background-color: #dddedd;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +44,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
