--- a/src/Components/myStyle.css
+++ b/src/Components/myStyle.css
@@ -3,15 +3,267 @@
     height: 90vh;
     width: 90vw;
     display: flex;
+    border-radius: 20px;
 }
 
-.sidebar-container {
-    background-color: red;
+.sidebar-container { 
+    /* border: 5px solid red; */
     flex: 0.3;
+    display: flex;
+    flex-direction: column;
+}
+
+.sb-header {
+    background-color: white;
+    border-radius: 20px;
+    padding: 10px 5px;
+    margin: 5px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.sb-search {
+    background-color: white;
+    border-radius: 20px;
+    padding: 10px 10px;
+    margin: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.search-box {
+    outline-width: 0;
+    border: none;
+    font-size: 1.2rem;
+}
+
+.sb-conversations {
+    background-color: white;
+    border-radius: 20px;
+    padding: 10px 10px;
+    margin: 5px;
+}
+
+.conversations-container {
+    display: grid;
+    grid-template-columns: 32px auto auto;
+    grid-template-rows: auto auto;
+    column-gap: 10px;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 20px;
+}
+
+.con-icon {
+    grid-area: 1/1/3/2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #d9d9d9;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+    color: white;
+    height: 32px;
+    width: 32px;
+    padding: 2px;
+    border-radius: 50%;
+    justify-self: center;
+    align-self: center;
+}
+
+.con-title {
+    grid-area: 1/2/2/4;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    color: rgba(red, green, blue, alpha);
+}
+
+.con-timeStamp {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgba(red, green, blue, alpha);
+    justify-self: flex-end;
+}
+
+.con-lastMessage {
+   
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgba(red, green, blue, alpha);
 }
 
 
-.workarea-container {
-    background-color: blue;
-    flex:0.7
+.chatArea-container {
+    flex:0.7;
+    display: flex;
+    flex-direction: column;
 }
+
+.chatArea-header {
+background-color: orange;
+display: flex;
+align-items: center;
+border-radius: 20px;
+margin: 10px;
+padding: 10px 10px;
+gap: 10px;
+}
+
+.messages-container {
+    flex: 1;
+    background-color: #ffffff;
+    padding: 10px 10px;
+    margin: 10px;
+    border-radius: 20px;
+    overflow:scroll;
+    scrollbar-width: none;
+}
+
+.messages-container::-webkit-scrollbar {
+    display: none;
+}
+
+.text-input-area {
+ 
+    padding: 10px 10px;
+    margin: 10px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 
+    1;
+}
+
+.search-box {
+ flex: 1;
+ border:none;
+ outline-width: 0;
+ margin-left: 10px;
+ font-size: 1.25rem;
+ color: rgba(red, green, blue, alpha);
+}
+
+.self-message-container {
+ display: flex;
+ justify-content: flex-end;
+}
+
+.messageBox {
+display: flex;
+flex-direction: column;
+background-color: #63d7b0;
+width: max-content;
+padding: 10px 10px;
+margin: 5px;
+border-radius: 20px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.other-message-container {
+display: flex;
+
+}
+
+.conversation-container {
+    display: flex;
+    align-items: center;
+    padding: 10px 10px;
+    margin:10px;
+    
+}
+
+.self-timeStamp {
+    align-self: flex-end;
+    font-size: 0.75rem;
+    font-weight: lighter;
+    color: grey;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.con-lastMessage {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 0.75rem;
+    padding: 10px;
+}
+
+.other-text-context {
+    background-color: #DCF8C6;
+    align-self: flex-start;
+    width:max-content;
+    width: max-content;
+    padding: 10px 10px;
+    margin: 5px;
+    border-radius: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.message {
+    margin: 8px 0;
+    padding: 8px 12px;
+    border-radius: 8px;
+    max-width: 70%;
+  }
+
+  .welcome-logo {
+    height: 20vw;
+  }
+
+  .welcome-container {
+    flex:0.7;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 0.7;
+    gap: 20px;
+    color: rgba(red, green, blue, alpha);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-bottom: 5px solid #63d7b0;
+    border-radius: 20px;
+  }
+
+  .createGroups-container {
+    flex:0.7;
+    padding:20px 20px;
+    background-color: white;
+    align-self: center;
+    justify-content: space-between;
+    border-radius: 20px;
+    display: flex;
+    margin: 10px;
+  }
+
+  .login-container {
+   height: 90vh;
+   width: 90vw;
+   background-color: wheat;
+   display: flex;
+   border-radius: 20px;
+  }
+
+  .image-container {
+   flex:0.3;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+  }
+
+  .login-box {
+    flex:0.7;
+    background-color: white;
+    border-radius: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #63d7b0;
+    font-weight: bolder;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+  }
